# routes/api.php
@@ -21,3 +21,4 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 
 
 Route::get('/test',[TestController::class,'test']);
+Route::post('/store',[TestController::class,'store']);
